SERVER-11455 added Object to support types for dollar type operator when working with arrays